# mosesdecoder

./: CMakeLists.txt  compile.sh  list-sources.sh
contrib/Makefiles/: install-dependencies.gmake
contrib/moses2/: Array.h  CMakeLists.txt  Main.cpp  MemPool.h
contrib/moses2/FF/: FeatureFunction.h  FeatureFunctions.cpp  FeatureFunctions.h  FeatureRegistry.cpp
contrib/moses2/LM/: MMTInterpolatedLM.cpp  MMTInterpolatedLM.h
contrib/moses2/PhraseBased/: Manager.cpp
contrib/moses2/TranslationModel/: PhraseTable.cpp  PhraseTableSADB.cpp  PhraseTableSADB.h
contrib/moses2/cmake/: FindMMTCommons.cmake
contrib/moses2/parameters/: ContextParameters.h  OOVHandlingOptions.cpp  OptionsBaseClass.h  ServerOptions.h
contrib/unit-test/: LMTest.arpa  LMTest.cpp  LMTest.h  LMTestArpa.cpp  LMTestArpa.h  LMTestHypothesis.cpp  MockHypothesis.cpp  MockHypothesis.h  MockIncremental.cpp  MockIncremental.h  MockManager.cpp  MockManager.h  MockSentence.cpp  MockSentence.h  MockStaticData.cpp  MockStaticData.h  MockTargetPhrase.cpp  MockTargetPhrase.h
moses/Syntax/: Manager.cpp
scripts/ems/: experiment.perl
scripts/ems/support/: reference-from-sgm.perl
